@@ -28,7 +28,7 @@ Items for 0.1.2.x, real soon now:
 N - Test guard unreachable logic; make sure that we actually attempt to
     connect to guards that we think are unreachable from time to time.
     Make sure that we don't freak out when the network is down.
-N - Stop recommending exits as guards?
+  o Stop recommending exits as guards?
     look at the overall fraction of exits in the network. if the
     fraction is too small, none of them get to be guards.
 
